
PROJECT(CANVAS_CPP CXX)

CMAKE_MINIMUM_REQUIRED(VERSION 2.8.1)

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)

# Always build with debug symbols for now.
LIST(APPEND CMAKE_CXX_FLAGS -g)

IF(UNIX)
  IF(APPLE)
    SET(CMAKE_OSX_ARCHITECTURES i386) #;x86_64
    ADD_DEFINITIONS("-DPLATFORM_MAC")
  ELSE()
    ADD_DEFINITIONS("-DPLATFORM_LINUX")
  ENDIF()
ENDIF(UNIX)

INCLUDE_DIRECTORIES(
  "${CMAKE_CURRENT_SOURCE_DIR}/include"
  "${CMAKE_CURRENT_SOURCE_DIR}/src"
  "${CMAKE_CURRENT_SOURCE_DIR}/tests"
)

LINK_DIRECTORIES(
)

ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(tests)

