
SET(SOURCE
   Interpreter.cpp
   Scheme.cpp
   Cell.cpp
   tinyscheme/scheme.c
)

SET(LIBRARIES
)

INCLUDE_DIRECTORIES("${CMAKE_CURRENT_SOURCE_DIR}/tinyscheme")
ADD_DEFINITIONS(-DUSE_DL=0 -DSTANDALONE=0 -DUSE_MATH=1 -DUSE_INTERFACE=1 -DUSE_ERROR_HOOK=0 -DSHOW_ERROR_LINE=0)

ADD_LIBRARY(scheme-cpp ${SOURCE})
TARGET_LINK_LIBRARIES(scheme-cpp ${LIBRARIES})

# Installation
INSTALL(TARGETS scheme-cpp CONFIGURATIONS Release DESTINATION lib)

